[package]
name = "try-dusk"
version = "0.1.0"
authors = ["ChihChengLiang <chihchengliang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dusk-plonk = {path="../plonk", features=["trace-print"]}
dusk-jubjub = "0.10.0"
rand_core = "0.6.2"
dusk-bytes = "0.1"
dusk-bls12_381 = {version = "0.8", default-features = false, features = ["groups", "pairings", "endo"]}